# tpinfographique

./: .gitignore  README.md  documentation.html  doxygen.cfg  make&run.sh
Blender/: .gitignore  Monde.blend  Skybox.blend  Titre.blend  Tortue.blend  Tortue_terrestre.blend
Blender/Autres/: export.py
Blender/Sfx/: avion.m4a  bombe.m4a  bombe2.m4a  boum.m4a  dort.m4a  essoyflage.m4a  galere.m4a  sacquiyombe.m4a  sifflement.m4a  tortue2.m4a
Concept Art/: .gitignore  concept.kra  script.txt.gpg
rapports/: Projet.typ  TP1.typ  TP2.typ  TP3.typ  TP4.typ  TP5.typ  TP6.typ  TP7.typ
rapports/TP1/: TP1.typ  TP2.typ
sampleProject/: CMakeLists.txt  demo_cubemap_blurring.cpp  demo_environment_lighting.cpp  demo_explosion.cpp  demo_moving_lights.cpp  demo_nonrigid.cpp  practical1.cpp  practical2.cpp  practical3.cpp  practical4.cpp  practical5.cpp  practical6.cpp  practical7.cpp  run.bat  run.sh  tortuekaizen.aup3  tortuekaizen.cpp
sampleProject/Animation/: Avion.animation  Bombe.animation  Camera.animation  Carapace.001.animation  Carapace.002.animation  Carapace.animation  Hours.animation  Larme.animation  Minutes.animation  Nag-ArD.001.animation  Nag-ArD.002.animation  Nag-ArD.animation  Nag-ArG.001.animation  Nag-ArG.002.animation  Nag-ArG.animation  Nag-AvD.001.animation  Nag-AvD.002.animation  Nag-AvD.animation  Nag-AvG.001.animation  Nag-AvG.002.animation  Red Beach Vietnam.animation  Sakado.animation  Tank.001.animation  Tank.004.animation  Tank.animation  Tete-ter.001.animation  Tete-ter.animation  Tete.001.animation  Tete.002.animation  Tete.animation  Titre.animation  TitreLight2.animation
sampleProject/ObjFiles/: Carapace.animation  Nag-ArD.animation  Nag-ArG.animation  Nag-AvD.animation  Nag-AvG.animation
sfmlGraphicsPipeline/: CMakeLists.txt
sfmlGraphicsPipeline/extlib/: Makefile
sfmlGraphicsPipeline/extlib/freetype-2.5.5/: CMakeLists.txt
sfmlGraphicsPipeline/extlib/glm-0.9.7.1/: CMakeLists.txt
sfmlGraphicsPipeline/extlib/glm-0.9.7.1/glm/detail/: dummy.cpp  glm.cpp
sfmlGraphicsPipeline/extlib/tinyobjloader/: CMakeLists.txt
sfmlGraphicsPipeline/extlib/tinyobjloader/python/: main.cpp
sfmlGraphicsPipeline/include/: Camera.hpp  CubeMeshRenderable.hpp  CubeRenderable.hpp  CylinderMeshRenderable.hpp  FPSCounter.hpp  FrameRenderable.hpp  GeometricTransformation.hpp  HierarchicalRenderable.hpp  IndexedCubeRenderable.hpp  Io.hpp  KeyframeCollection.hpp  KeyframedHierarchicalRenderable.hpp  MeshRenderable.hpp  Plane.hpp  QuadMeshRenderable.hpp  Renderable.hpp  ShaderProgram.hpp  SphereMeshRenderable.hpp  Utils.hpp  Viewer.hpp  gl_helper.hpp  log.hpp
sfmlGraphicsPipeline/include/dynamics/: Collision.hpp  ConstantForceField.hpp  ConstantForceFieldRenderable.hpp  ControlledForceFieldRenderable.hpp  DampingForceField.hpp  DynamicSystem.hpp  DynamicSystemRenderable.hpp  EulerExplicitSolver.hpp  ForceField.hpp  MushroomForceField.hpp  Particle.hpp  ParticleListRenderable.hpp  ParticleParticleCollision.hpp  ParticlePlaneCollision.hpp  ParticleRenderable.hpp  RadialImpulseForceField.hpp  Solver.hpp  SpringForceField.hpp  SpringForceFieldRenderable.hpp  SpringListRenderable.hpp
sfmlGraphicsPipeline/include/lighting/: DirectionalLightRenderable.hpp  Light.hpp  LightedCubeRenderable.hpp  LightedCylinderRenderable.hpp  LightedMeshRenderable.hpp  Material.hpp  PointLightRenderable.hpp  SpotLightRenderable.hpp
sfmlGraphicsPipeline/include/texturing/: BillBoardPlaneRenderable.hpp  CubeMapRenderable.hpp  CubeMapUtils.hpp  EnvMapMeshRenderable.hpp  MipMapCubeRenderable.hpp  MultiTexturedCubeRenderable.hpp  TexturedCubeRenderable.hpp  TexturedLightedMeshRenderable.hpp  TexturedMeshRenderable.hpp  TexturedPlaneRenderable.hpp  TexturedTriangleRenderable.hpp
sfmlGraphicsPipeline/post_shaders/: FogFragment.glsl  IdentityFragment.glsl  IdentityVertex.glsl  grayscale.glsl
sfmlGraphicsPipeline/shaders/: billboardFragment.glsl  billboardVertex.glsl  blurFragment.glsl  blurVertex.glsl  cartoonFragment.glsl  cartoonTextureFragment.glsl  cubeMapFragment.glsl  cubeMapToPanoramaFragment.glsl  cubeMapToPanoramaVertex.glsl  cubeMapVertex.glsl  debugFragment.glsl  debugVertex.glsl  envmapFragment.glsl  flatVertex.glsl  instancedFragment.glsl  instancedVertex.glsl  multiTextureFragment.glsl  multiTextureNormalFragment.glsl  multiTextureVertex.glsl  nonRigidFragment.glsl  nonRigidVertex.glsl  panoramaToCubeMapFragment.glsl  partFragment.glsl  partVertex.glsl  phongFragment.glsl  textureFragment.glsl
sfmlGraphicsPipeline/src/: Camera.cpp  CubeMeshRenderable.cpp  CubeRenderable.cpp  CylinderMeshRenderable.cpp  FPSCounter.cpp  FrameRenderable.cpp  GeometricTransformation.cpp  HierarchicalRenderable.cpp  IndexedCubeRenderable.cpp  Io.cpp  KeyframeCollection.cpp  KeyframedHierarchicalRenderable.cpp  MeshRenderable.cpp  Plane.cpp  QuadMeshRenderable.cpp  Renderable.cpp  ShaderProgram.cpp  SphereMeshRenderable.cpp  Utils.cpp  Viewer.cpp  gl_helper.cpp  log.cpp
sfmlGraphicsPipeline/src/dynamics/: Collision.cpp  ConstantForceField.cpp  ConstantForceFieldRenderable.cpp  ControlledForceFieldRenderable.cpp  DampingForceField.cpp  DynamicSystem.cpp  DynamicSystemRenderable.cpp  EulerExplicitSolver.cpp  ForceField.cpp  MushroomForceField.cpp  Particle.cpp  ParticleListRenderable.cpp  ParticleParticleCollision.cpp  ParticlePlaneCollision.cpp  ParticleRenderable.cpp  RadialImpulseForceField.cpp  Solver.cpp  SpringForceField.cpp  SpringForceFieldRenderable.cpp  SpringListRenderable.cpp
sfmlGraphicsPipeline/src/lighting/: DirectionalLightRenderable.cpp  Light.cpp  LightedCubeRenderable.cpp  LightedCylinderRenderable.cpp  LightedMeshRenderable.cpp  Material.cpp  PointLightRenderable.cpp  SpotLightRenderable.cpp
sfmlGraphicsPipeline/src/texturing/: BillBoardPlaneRenderable.cpp  CubeMapRenderable.cpp  CubeMapUtils.cpp  EnvMapMeshRenderable.cpp  MipMapCubeRenderable.cpp  MultiTexturedCubeRenderable.cpp  TexturedCubeRenderable.cpp  TexturedLightedMeshRenderable.cpp  TexturedMeshRenderable.cpp  TexturedPlaneRenderable.cpp  TexturedTriangleRenderable.cpp
(+76 files in other folders)
